--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -39,10 +39,10 @@ application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name="Diamond Studio GAMES"
+application/company_name="Summersay415"
 application/product_name=""
-application/file_description="Program for setting up rings schedule in school"
-application/copyright="2025-present Diamond Studio GAMES"
+application/file_description="Программа настройки расписания для автоматической системы подачи звонков."
+application/copyright="2025-present Summersay415"
 application/trademarks=""
 application/export_angle=0
 application/export_d3d12=0
