--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -31,7 +31,7 @@ codesign/enable=true
 codesign/timestamp=false
 codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
-codesign/description="Program for setting up rings schedule in school"
+codesign/description="Программа настройки расписания для автоматической системы подачи звонков."
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
 application/icon=""
